Skip to content

Incoherent mouse hiding

The CA OpenGL layer and the MacOS X video display plugins set has_hide_mouse to true, meaning that the VOUT_DISPLAY_HIDE_MOUSE control will not be used.

Yet they both have non-trivial such controls... This does not make sense. Either they are useless dead code and should be removed, or mouse hiding is broken.

(Note that cursor hiding should be done by the video window, not the video display, so removing this code is a good idea either way.)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information