macosx: Only hide mouse if inside the video view

Ref #18658