modules/gui/macosx/VLCVoutWindowController.h
@@ -46,4 +46,6 @@
 
 - (void)updateWindowLevelForHelperWindows:(NSInteger)i_level;
 
+- (void)hideMouseForWindow:(vout_window_t *)p_wnd;
+
 @end
